log/build_2022-11-13_16-47-33/robo_builder_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_builder_py/lib/python3.8/site-packages/robo_builder_py/robo_builder.py", line 30
    ur_script_command = self.movej(self.home_pos[])
                                                 ^
SyntaxError: invalid syntax

